[package]
name = "revealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.2"
